--- a/Encapsulation.ipynb
+++ b/Encapsulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJ8TChUhwAJCqrvW7vWZhC",
+      "authorship_tag": "ABX9TyN23JtoBX39MHj3Nn+hJBWA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
         },
         "outputId": "f5d67205-84e6-49b2-bcdb-3b2fb1357104"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "id": "4ZrlSKWVY7jA",
         "outputId": "c761b4c9-7731-48fd-acf2-edb946c37a87"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +184,7 @@
         "id": "gjsQqU5hbksZ",
         "outputId": "918eb483-db7f-429f-a6fa-be2f52f1b337"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -223,13 +223,62 @@
         "id": "yqSaeoPneM1z",
         "outputId": "a06b2265-c916-48a2-a701-87034546125c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "value:  7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Setter: Updates private data\n",
+        "\n",
+        "Getter: Reads private data"
+      ],
+      "metadata": {
+        "id": "zOzaLI0Kmmwn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "class student:\n",
+        "    def __init__(self,n,a):\n",
+        "        self.__a=a\n",
+        "    def get_a(self):\n",
+        "        return self.__a\n",
+        "    def set_a(self,new_a):\n",
+        "        if new_a>0:\n",
+        "            self.__age=new_a\n",
+        "        else:\n",
+        "            print(\"invalid age\")\n",
+        "s1=student(\"MANI\",20)\n",
+        "print(s1.get_a())\n",
+        "s1.set_a(21)\n",
+        "print(s1.get_a())"
+      ],
+      "metadata": {
+        "id": "imtjZyHlnEDv",
+        "outputId": "7f9cc6ab-b276-4289-8042-e2da841bb96f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "20\n"
           ]
         }
       ]
